# Crewai-news

./: .gitignore  README.md  crawl-simple.py  crawlinhos copy 2.py  crawlinhos copy 3.py  crawlinhos copy.py  crawlinhos.py
crawl4ai-teste/: crew.py  main.py  models.py
crawl4ai-teste/config/: agents.yaml  tasks.yaml
crawl4ai-teste/data/: researchers.csv
crawl4ai-teste/tools/: custom_tool.py  scholar_crawler_tool.py  scholar_search_tool.py
exemplo_joao/: README.md  pyproject.toml
exemplo_joao/src/teste_criacao/: crew.py  main.py
exemplo_mervin/: README.md  basico.py  pyproject.toml
exemplo_mervin/src/exemplo_mervin/: crew.py  main.py
noticias/: crew.py  main.py
noticias/config/: agents.yaml  tasks.yaml
noticias/tools/: custom_tool.py
scholar-leads-2/: crew.py  main.py  models.py  requirements.txt  streamlit_app.py  utils.py
scholar-leads-2/config/: agents.yaml  tasks.yaml
scholar-leads-2/data/: Leonardo_Fernandes_Martins_20250321_180557.json
scholar-leads-2/tools/: profile_filter_tool.py  scholar_crawler_tool.py
scholar_leads/: crew.py  gradio_app.py  llm_config.py  main.py  models.py  streamlit_app.py
scholar_leads/config/: agents.yaml  tasks.yaml
scholar_leads/data/: Felipe_Rafael_de_Souza_20250319_140418.json  Joao_Marcos_de_Freitas_20250319_141756.json  Leonardo_Fernandes_Martins_20250319_134716.json  POLLYANNA_SANTOS_DA_SILVEIRA_20250319_142446.json
scholar_leads/tools/: crawlinhos.py  scholar_crawler_tool.py  scholar_search_tool.py
teste/: socorro_deus.json
teste-schoolar/: main.py
teste-schoolar/tools/: custom_tool.py
