[project]
name = "exemplo_mervin"
version = "0.1.0"
description = "exemplo-mervin using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
exemplo_mervin = "exemplo_mervin.main:run"
run_crew = "exemplo_mervin.main:run"
train = "exemplo_mervin.main:train"
replay = "exemplo_mervin.main:replay"
test = "exemplo_mervin.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
